# libmatrix

./: .gitignore  CMakeLists.txt  README.md  README.rst
cmake/: cmake_gtest.in
doc/: Doxyfile
docs/: annotated.html  annotated_dup.js  blas_8h.html  blas_8h.js  blas_8h__dep__incl.map  blas_8h__dep__incl.md5  blas_8h__incl.map  blas_8h__incl.md5  blas_8h_source.html  blas__base_8h.html  blas__base_8h.js  blas__base_8h_source.html  classes.html  classmatrix_1_1Matrix-members.html  classmatrix_1_1Matrix.html  classmatrix_1_1Matrix.js  classmatrix_1_1MatrixCommaInitializer-members.html  classmatrix_1_1MatrixCommaInitializer.html  classmatrix_1_1MatrixCommaInitializer.js  classmatrix_1_1exception_1_1DimensionError-members.html  classmatrix_1_1exception_1_1DimensionError.html  classmatrix_1_1exception_1_1DimensionError.js  classmatrix_1_1exception_1_1DimensionError__coll__graph.map  classmatrix_1_1exception_1_1DimensionError__coll__graph.md5  classmatrix_1_1exception_1_1DimensionError__inherit__graph.map  classmatrix_1_1exception_1_1DimensionError__inherit__graph.md5  classmatrix_1_1exception_1_1IndexRangeError-members.html  classmatrix_1_1exception_1_1IndexRangeError.html  classmatrix_1_1exception_1_1IndexRangeError.js  classmatrix_1_1exception_1_1IndexRangeError__coll__graph.map  classmatrix_1_1exception_1_1IndexRangeError__coll__graph.md5  classmatrix_1_1exception_1_1IndexRangeError__inherit__graph.map  classmatrix_1_1exception_1_1IndexRangeError__inherit__graph.md5  classmatrix_1_1exception_1_1MatrixException-members.html  classmatrix_1_1exception_1_1MatrixException.html  classmatrix_1_1exception_1_1MatrixException.js  classmatrix_1_1exception_1_1MatrixException__coll__graph.map  classmatrix_1_1exception_1_1MatrixException__coll__graph.md5  classmatrix_1_1exception_1_1MatrixException__inherit__graph.map  classmatrix_1_1exception_1_1MatrixException__inherit__graph.md5  (+92 more)
docs/search/: all_2.js  all_3.js  all_6.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js
include/matrix/: matrix.h
include/matrix/details/: blas.h  comma_initialize.h  exception.h  lapack.h  matrix.h  matrix_io.h
src/: blas.cpp  blas.h  blas_base.h  comma_initialize.h  exception.cpp  exception.h  io.h  lapack.cpp  lapack.h  lapack_base.h  matrix.cpp  matrix.h  matrix_io.cpp  matrix_io.h
src/matrix/: CMakeLists.txt  blas.cpp  blas_base.h  exception.cpp  lapack.cpp  matrix.cpp  matrix_io.cpp
test/: CMakeLists.txt  assignment_test.cpp  constructor_test.cpp  dgemm_test.cpp  diag_dsyev_test.cpp  diag_sym_matrix_test.cpp  diagonalize_test.cpp  dscal_test.cpp  element_test.cpp  invert_matrix_test.cpp  matrix_checker_test.cpp  matrix_type_test.cpp  matrix_write_txt_test.cpp  random_orthogonal_matrix_test.cpp  randomize_test.cpp  resize_test.cpp  symmetric_test.cpp  transpose_test.cpp  utils.h
